--- a/langchainLLMTest.ipynb
+++ b/langchainLLMTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nThe average human body contains enough iron to make a 3 inch nail.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# basic llm output\n",
-    "\n",
-    "llm = OpenAI(temperature=0)\n",
+    "OPENAI_API_KEY = \"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\"\n",
+    "llm = OpenAI(temperature=0,openai_api_key=OPENAI_API_KEY)\n",
     "llm(\"Tell me a fact\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +61,7 @@
    ],
    "source": [
     "# multiple inputs\n",
-    "llm = OpenAI(temperature=0, model_name='text-davinci-003')\n",
+    "llm = OpenAI(temperature=0, model_name='text-davinci-003',openai_api_key=OPENAI_API_KEY)\n",
     "result = llm.generate([\"tell me a fact\", \"tell me a joke\", \"tell me a funny fact that could be misunderstood as a joke\"])\n",
     "\n",
     "for generation in result.generations:\n",
